tests/failing/rotfirst.tail
let v1:[int]2 = reshape{[int],[1,2]}([3,4],iotaV(12)) in
let v2:S(bool,1) = tt in
let v3:[int]2 = v1 in
let v4:[int]2 = transp{[int],[2]}(cat{[int],[2]}(transp{[int],[2]}(drop{[int],[2]}(b2iV(v2),v3)),transp{[int],[2]}(take{[int],[2]}(b2iV(v2),v3)))) in
let v7:[int]2 = prArrI(each{[int,int],[2]}(fn v6:[int]0 => mini(9,v6),each{[int,int],[2]}(fn v5:[int]0 => subi(v5,b2iV(tt)),v4))) in
let v10:[int]2 = prArrI(each{[int,int],[2]}(fn v9:[int]0 => mini(9,v9),each{[int,int],[2]}(fn v8:[int]0 => subi(v8,b2iV(tt)),vrotate{[int],[2]}(b2iV(tt),v1)))) in
i2d(b2iV(ff))
